fixed double spacing in words

--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 html, 
 body, 
 p {
-    text-align: center;
     font-family: 'Poppins', sans-serif;
     height: 100%;
-    text-align: justify;
+    
     font-size: 1rem;
   }
 
@@ -169,7 +168,7 @@ b {
     text-align: left;
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     float: left;
     margin-right: 360px;
     padding-left: 20px;
